<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".language"
    android:background="@color/white"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/green"
        android:textSize="24sp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_language"
        android:textColor="@color/black"
        android:gravity="center"
        android:textSize="30sp"
        android:layout_margin="8dp"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cl"
        android:text="@string/choose_language"
        android:background="@color/green"
        android:textColor="@color/white"
        android:layout_margin="16dp"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="16sp"
        android:layout_gravity="center"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kindly_select_your_prefered_audio_language"
            android:textColor="@color/black"
            android:gravity="center"
            android:textSize="24sp"
            />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/edittext"
            android:padding="4dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/ll1"
                android:background="@color/white"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                >

                <TextView
                    android:id="@+id/english"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/english"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:textSize="32sp"

                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/ll2"
                android:background="@color/white"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                >
                <TextView
                    android:id="@+id/hindi"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="हिंदी"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:textSize="32sp"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/ll3"
                android:background="@color/white"
                android:layout_marginTop="8dp"
                >
                <TextView
                    android:id="@+id/bengali"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="বাংলা"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:textSize="32sp"

                    />
            </LinearLayout>



        </androidx.appcompat.widget.LinearLayoutCompat>



        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/continueBtn"
            android:text="@string/continuee"
            android:background="@color/mint"
            android:textColor="@color/white"
            android:layout_margin="16dp"
            />



    </LinearLayout>


 <!--   <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/continueBtn"
        android:text="@string/continuee"
        android:background="@color/green"
        android:textColor="@color/white"
        android:layout_margin="16dp"
        /> -->

</LinearLayout>